# SickPool2

./: Cargo.toml  README.md  config.rs  log4rs.yml  report.xml
benches/: parse.rs
config/: stratum.json
data/config/: p2p.json  stratum.json
data/peers/: 127.0.0.1.json
datadir/: stratum.json
datadir/config/: p2p.json  stratum.json
datadir/peers/: 127.0.0.1.json  127.0.0.1:1968.json
datadir2/config/: p2p.json  stratum.json
datadir2/peers/: 127.0.0.1.json  127.0.0.1:46952.json  127.0.0.1:48844.json  127.0.0.1:52226.json  127.0.0.1:56042.json
src/: currency.rs  main.rs  rpc_server.rs  server.rs
src/lib/: address.rs  config.rs  mod.rs  notifiable_protocol.rs  protocol.rs  protocol_server.rs  server.rs  sickrpc.rs
src/lib/coins/: bitcoin.rs  coin.rs  mod.rs
src/lib/p2p/: duplicate_checker.rs  mod.rs
src/lib/p2p/consensus/: block_manager.rs  consensus.rs  mod.rs  target_manager.rs
src/lib/p2p/networking/: archive.rs  bitcoin.rs  block.rs  block_manager.rs  config.rs  difficulty.rs  discovery.rs  hard_config.rs  messages.rs  mod.rs  p2p_handler.rs  peer.rs  peer_manager.rs  pool_manager.rs  pplns.rs  protocol.rs  server.rs  share.rs  stratum_handler.rs  target_manager.rs  utils.rs
src/lib/stratum/: client.rs  common.rs  config.rs  handler.rs  header.rs  job.rs  job_btc.rs  job_fetcher.rs  job_manager.rs  mod.rs  protocol.rs  server.rs  stratum_handler.rs  stratum_v1.rs
src/p2p/: mod.rs
src/p2p/networking/: discovery.rs  peer.rs
test_data/: sample_first_share.json
tests/: sample_first_share.json
