[package]
name = "SickPool2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version ="0.8.6", features = ["os-poll", "net"]}
slab = "0.4.8"
serde = "1.0.163"
serde_json = "1.0.96"
itertools = "0.10.5"
log = "0.4.17"
log4rs= {version="1.2", features=["rolling_file_appender", "pattern_encoder"]}

[profile.release]
lto = true
