[package]
name = "sickpool2"
version = "0.1.0"
edition = "2021"

[lib]
name = "sickpool2lib"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version ="0.8.6", features = ["os-poll", "net"]}
slab = "0.4.8"
serde = "1.0.163"
serde_json = "1.0.96"
serde_tuple = "0.5"
serde_with = {version = "3.0", features=["hex"]}
itertools = "0.10.5"
log = "0.4.17"
log4rs= {version="1.2", features=["rolling_file_appender", "pattern_encoder"]}
bitcoincore-rpc = "0.17.0"
serde-hex = {version="0.1.0", git="https://github.com/thomaseizinger/serde-hex.git", branch="support-deserialize-owned-strings"}
assert-impl = "0.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parse"
test = true
harness = false

[profile.release]
lto = true
