[package]
name = "sickpool2"
version = "0.1.0"
edition = "2021"

[lib]
name = "sickpool2lib"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version ="0.8.6", features = ["os-poll", "net"]}
slab = "0.4.8"
serde = {version="1.0.163", features=["alloc"]}
serde_json = {version="1.0.96", features=["alloc"]}
serde_tuple = "0.5"
serde_with = {version = "3.0", features=["hex"]}
itertools = "0.10.5"
log = "0.4.17"
log4rs= {version="1.2", features=["rolling_file_appender", "pattern_encoder"]}
bitcoincore-rpc = {version="0.17.0", features=[]}
serde-hex = {version="0.1.0", git="https://github.com/thomaseizinger/serde-hex.git", branch="support-deserialize-owned-strings"}
assert-impl = "0.1.3"
io-arc = "1.0.0"
bincode = "1.3.3"
duration-str = "0.5.1"
crypto-bigint = {version ="0.5.2", features=["serde", "alloc"]}
rust_decimal_macros = "1.30.0"
display_bytes = "0.2.1"
bitcoin = { version = "0.30.0", features = ["serde",] }
hex = "0.4.3"
flume = "0.10.14"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parse"
test = true
harness = false

[profile.release]
lto = true
